# gatk_callSNP_workflow_package

./: .gitignore  DEPENDENCY_TROUBLESHOOTING.md  LICENSE  README  README.md  build.py  build.spec  build_multi_platform.py  config_example.yaml  docker_build.py  environment.yml  gatk-snp-pipeline-windows-x64.exe.spec  linux_setup.sh  pyproject.toml  requirements.txt  run.py  run_workflow.py  setup.py  tatus -s  test_binary.py  test_config.yaml  test_deps.py
.github/workflows/: build.yml
.ipynb_checkpoints/: run_workflow-checkpoint.py
binary_test/: test_config.yaml
binary_test_mode/: test_config.yaml
config/: default_config.yaml
examples/: import_example.py
gatk_snp_pipeline/: __init__.py  cli.py  config.py  data_generator.py  dependency_checker.py  logger.py  main.py  pipeline.py
gatk_snp_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: linux_hook.py  windows_hook.py
snakefiles/: 00_ref_index.smk  02_sort_sam.smk  04_index_bam.smk  06_combine_gvcfs.smk  07_genotype_gvcfs.smk  08_vcf_filter.smk  09_select_snp.smk  10_get_GWAS_data.smk  bwa_map.smk  combine_gvcfs.smk  genotype_gvcfs.smk  haplotype_caller.smk  mark_duplicates.smk  ref_index.smk  snakefiles  sort_sam.smk
src/: __init__.py  config_manager.py  logger.py  pipeline.py
src/steps/: __init__.py  bwa_map.py  combine_gvcfs.py  get_gwas_data.py  haplotype_caller.py  index_bam.py  mark_duplicates.py  ref_index.py  soft_filter_snp.py  vcf_filter.py
src/utils/: __init__.py  cmd_utils.py  dependency_checker.py  (+3 more)
test_data/: test_config.yaml
(+13 files in other folders)
