[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatk-snp-pipeline"
version = "0.1.0"
description = "A GATK SNP Calling Pipeline"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "setuptools>=45.0.0",
    "wheel>=0.34.0",
    "psutil>=5.8.0",
]

[project.scripts]
gatk-snp-pipeline = "gatk_snp_pipeline.cli:main"

[tool.setuptools]
packages = ["gatk_snp_pipeline"] 